--- a/index.html
+++ b/index.html
@@ -5,22 +5,41 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+
     <!-- Library -->
     <script src="js/lib/angular.js"></script>
     <!-- Main application file -->
     <script src="js/app.js"></script>
     <!-- Controllers -->
     <script src="js/controllers/chewzController.js"></script>
-    <script src="js/factories/GameFactory.js"></script>
 </head>
 <body ng-app="ChewZ">
-<div ng-controller="chewzController">
-
-    <ng-include src="'views/gamebuilder.html'"></ng-include>
-    <ng-include src="views/games.html"></ng-include>
+<div class="container" ng-controller="chewzController">
+    <h1>Chew-Z</h1>
+    <h3>A Choose Your Own Adventure Generator</h3>
+    <form class="form-horizontal">
+        <fieldset>
+            <div class="control-group">
+                <div class="controls">
+                    <button id="newButton" name="newButton" class="btn btn-success" ng-click="createGame()">New Game</button>
+                    <!--<button id="noButton" name="noButton" class="btn btn-info">No</button>-->
+                </div>
+            </div>
+        </fieldset>
+    </form>
+    <div>
+        <ul>
+            <li ng-repeat="game in games.data track by $index">
+                <div contenteditable="true"><h4>{{games.data[$index].title}}</h4></div>
+            </li>
+        </ul>
+    </div>
 
 </div>
 
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
